Split banner buttons left/right; fix mobile nav alignment
Social icons and FriendsPanel anchor to bottom-left of banner;
edit/follow/friend buttons anchor to bottom-right. Also fixes
mobile nav bar to stay right-aligned at narrow viewport widths.

--- a/app/globals.css
+++ b/app/globals.css
@@ -1406,7 +1406,7 @@ html[data-theme="day"] textarea[class] {
 
   .navRight {
     width: 100%;
-    justify-content: center;
+    justify-content: flex-end;
   }
 }
 
